--- a/config-connector/solutions/projects/project-hierarchy/project.yaml
+++ b/config-connector/solutions/projects/project-hierarchy/project.yaml
@@ -2,13 +2,10 @@ apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
 kind: Project
 metadata:
   annotations:
-    # Replace "${FOLDER_ID?}" with the numeric ID for your folder
-    cnrm.cloud.google.com/folder-id: "${FOLDER_ID?}"
-  labels:
-    label-one: "value-one"
-  name: project-sample-in-folder
+    cnrm.cloud.google.com/folder-id: "project-hierarchy-folder"
+  name: project-hierarchy-project
 spec:
-  name: Config Connector Sample
+  name: Project Hierarchy Project
   billingAccountRef:
     # Replace "${BILLING_ACCOUNT_ID?}" with the numeric ID for your billing account
     external: "${BILLING_ACCOUNT_ID?}"
