--- a/config-connector/solutions/projects/project-hierarchy/kpt/folder.yaml
+++ b/config-connector/solutions/projects/project-hierarchy/kpt/folder.yaml
@@ -3,7 +3,7 @@ kind: Folder
 metadata:
   annotations:
     # Replace "${ORG_ID?}" with the numeric ID for your organization
-    cnrm.cloud.google.com/organization-id: "${ORG_ID?}"
+    cnrm.cloud.google.com/organization-id: "${ORG_ID?}" # {"$ref":"#/definitions/io.k8s.cli.setters.org-id"}
   name: project-hierarchy-folder
 spec:
   displayName: Project Hierarchy Folder
