created more setters, fixed descriptions

--- a/config-connector/solutions/projects/project-hierarchy/kpt/folder.yaml
+++ b/config-connector/solutions/projects/project-hierarchy/kpt/folder.yaml
@@ -4,6 +4,6 @@ metadata:
   annotations:
     # Replace "${ORG_ID?}" with the numeric ID for your organization
     cnrm.cloud.google.com/organization-id: "${ORG_ID?}" # {"$ref":"#/definitions/io.k8s.cli.setters.org-id"}
-  name: project-hierarchy-folder
+  name: project-hierarchy-folder # {"$ref":"#/definitions/io.k8s.cli.setters.folder-id"}
 spec:
   displayName: Project Hierarchy Folder
