--- a/config-connector/solutions/projects/project-hierarchy/kpt/project.yaml
+++ b/config-connector/solutions/projects/project-hierarchy/kpt/project.yaml
@@ -2,8 +2,8 @@ apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
 kind: Project
 metadata:
   annotations:
-    cnrm.cloud.google.com/folder-id: "project-hierarchy-folder"
-  name: project-hierarchy-project
+    cnrm.cloud.google.com/folder-id: "project-hierarchy-folder" # {"$ref":"#/definitions/io.k8s.cli.setters.folder-id"}
+  name: project-hierarchy-project # {"$ref":"#/definitions/io.k8s.cli.setters.project-id"}
 spec:
   name: Project Hierarchy Project
   billingAccountRef:
