--- a/config-connector/solutions/kpt/projects/project-hierarchy/folder.yaml
+++ b/config-connector/solutions/kpt/projects/project-hierarchy/folder.yaml
@@ -6,4 +6,4 @@ metadata:
     cnrm.cloud.google.com/organization-id: "${ORG_ID?}" # {"$ref":"#/definitions/io.k8s.cli.setters.org-id"}
   name: project-hierarchy-folder # {"$ref":"#/definitions/io.k8s.cli.setters.folder-id"}
 spec:
-  displayName: Project Hierarchy Folder
+  displayName: Project Hierarchy Folder # {"$ref":"#/definitions/io.k8s.cli.setters.folder-name"}
