--- a/config-connector/solutions/kpt/projects/project-hierarchy/project.yaml
+++ b/config-connector/solutions/kpt/projects/project-hierarchy/project.yaml
@@ -5,7 +5,7 @@ metadata:
     cnrm.cloud.google.com/folder-id: "project-hierarchy-folder" # {"$ref":"#/definitions/io.k8s.cli.setters.folder-id"}
   name: project-hierarchy-project # {"$ref":"#/definitions/io.k8s.cli.setters.project-id"}
 spec:
-  name: Project Hierarchy Project
+  name: Project Hierarchy Project # {"$ref":"#/definitions/io.k8s.cli.setters.project-name"}
   billingAccountRef:
     # Replace "${BILLING_ACCOUNT_ID?}" with the numeric ID for your billing account
-    external: "${BILLING_ACCOUNT_ID?}"
+    external: "${BILLING_ACCOUNT_ID?}" # {"$ref":"#/definitions/io.k8s.cli.setters.billing-account"}
