added script for two-step process, added placeholders and setter

--- a/config-connector/solutions/projects/kpt/project-hierarchy/folder.yaml
+++ b/config-connector/solutions/projects/kpt/project-hierarchy/folder.yaml
@@ -3,7 +3,7 @@ kind: Folder
 metadata:
   annotations:
     # Replace "${ORG_ID?}" with the numeric ID for your organization
-    cnrm.cloud.google.com/organization-id: "${ORG_ID?}" # {"$ref":"#/definitions/io.k8s.cli.setters.org-id"}
+    cnrm.cloud.google.com/organization-id: "${ORG_ID}" # {"$ref":"#/definitions/io.k8s.cli.setters.org-id"}
   name: project-hierarchy-folder # {"$ref":"#/definitions/io.k8s.cli.setters.folder-id"}
 spec:
   displayName: Project Hierarchy Folder # {"$ref":"#/definitions/io.k8s.cli.setters.folder-name"}
