--- a/config-connector/solutions/projects/kpt/project-hierarchy/project.yaml
+++ b/config-connector/solutions/projects/kpt/project-hierarchy/project.yaml
@@ -2,8 +2,9 @@ apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
 kind: Project
 metadata:
   annotations:
-    cnrm.cloud.google.com/folder-id: "project-hierarchy-folder" # {"$ref":"#/definitions/io.k8s.cli.setters.folder-id"}
-  name: project-hierarchy-project # {"$ref":"#/definitions/io.k8s.cli.setters.project-id"}
+    # Run set-folder-number.sh to find and set this field after applying folder.yaml
+    cnrm.cloud.google.com/folder-id: "${FOLDER_NUMBER?}" # {"$ref":"#/definitions/io.k8s.cli.setters.folder-number"}
+  name: ${PROJECT_ID?} # {"$ref":"#/definitions/io.k8s.cli.setters.project-id"}
 spec:
   name: Project Hierarchy Project # {"$ref":"#/definitions/io.k8s.cli.setters.project-name"}
   billingAccountRef:
