--- a/config-connector/solutions/projects/kpt/project-hierarchy/project.yaml
+++ b/config-connector/solutions/projects/kpt/project-hierarchy/project.yaml
@@ -16,7 +16,7 @@ apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
 kind: Project
 metadata:
   annotations:
-    # Run set-folder-number.sh to find and set this field after applying folder.yaml
+    # Set this field after finding the folder number.
     cnrm.cloud.google.com/folder-id: "${FOLDER_NUMBER?}" # {"$ref":"#/definitions/io.k8s.cli.setters.folder-number"}
   name: project-factory-project # {"$ref":"#/definitions/io.k8s.cli.setters.project-id"}
 spec:
