--- a/config-connector/solutions/projects/kpt/project-owner/project.yaml
+++ b/config-connector/solutions/projects/kpt/project-owner/project.yaml
@@ -20,6 +20,7 @@ metadata:
     cnrm.cloud.google.com/folder-id: "${FOLDER_NUMBER?}" # {"$ref":"#/definitions/io.k8s.cli.setters.folder-number"}
   name: project-owner-project # {"$ref":"#/definitions/io.k8s.cli.setters.project-id"}
 spec:
+  name: project-owner-project # {"$ref":"#/definitions/io.k8s.cli.setters.project-id"}
   billingAccountRef:
     # Replace "${BILLING_ACCOUNT_ID?}" with the numeric ID for your billing account
     external: "${BILLING_ACCOUNT_ID?}" # {"$ref":"#/definitions/io.k8s.cli.setters.billing-account"}
