Package rename to owned-project

--- a/config-connector/solutions/projects/kpt/owned-project/iampolicymember.yaml
+++ b/config-connector/solutions/projects/kpt/owned-project/iampolicymember.yaml
@@ -17,9 +17,9 @@ kind: IAMPolicyMember
 metadata:
   name: iampolicymember-sample-projectlevel
 spec:
-  member: serviceAccount:project-owner-service@project-owner-project.iam.gserviceaccount.com # {"$ref":"#/definitions/io.k8s.cli.setters.iam-name"}
+  member: serviceAccount:owned-project-service@owned-project.iam.gserviceaccount.com # {"$ref":"#/definitions/io.k8s.cli.setters.iam-name"}
   role: roles/owner
   resourceRef:
     apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
     kind: Project
-    external: projects/project-owner-project # {"$ref":"#/definitions/io.k8s.cli.substitutions.project-selflink"}
+    external: projects/owned-project # {"$ref":"#/definitions/io.k8s.cli.substitutions.project-selflink"}
