--- a/config-connector/solutions/projects/kpt/owned-project/project.yaml
+++ b/config-connector/solutions/projects/kpt/owned-project/project.yaml
@@ -18,9 +18,9 @@ metadata:
   annotations:
     # Set this field after finding the folder number.
     cnrm.cloud.google.com/folder-id: "${FOLDER_NUMBER?}" # {"$ref":"#/definitions/io.k8s.cli.setters.folder-number"}
-  name: project-owner-project # {"$ref":"#/definitions/io.k8s.cli.setters.project-id"}
+  name: owned-project # {"$ref":"#/definitions/io.k8s.cli.setters.project-id"}
 spec:
-  name: project-owner-project # {"$ref":"#/definitions/io.k8s.cli.setters.project-id"}
+  name: owned-project # {"$ref":"#/definitions/io.k8s.cli.setters.project-id"}
   billingAccountRef:
     # Replace "${BILLING_ACCOUNT_ID?}" with the numeric ID for your billing account
     external: "${BILLING_ACCOUNT_ID?}" # {"$ref":"#/definitions/io.k8s.cli.setters.billing-account"}
