combined project-id and project-name into one setter

--- a/config-connector/solutions/projects/kpt/simple-project/project.yaml
+++ b/config-connector/solutions/projects/kpt/simple-project/project.yaml
@@ -18,7 +18,8 @@ metadata:
     cnrm.cloud.google.com/organization-id: "${ORG_ID?}" # {"$ref":"#/definitions/io.k8s.cli.setters.org-id"}
   name: simple-project # {"$ref":"#/definitions/io.k8s.cli.setters.project-id"}
 spec:
-  name: simple-project # {"$ref":"#/definitions/io.k8s.cli.setters.project-name"}
+  # This name can be changed to something more human-readable if desired.
+  name: simple-project # {"$ref":"#/definitions/io.k8s.cli.setters.project-id"}
   billingAccountRef:
     # Replace "${BILLING_ACCOUNT_ID?}" with the numeric ID for your billing account
     external: "${BILLING_ACCOUNT_ID?}" # {"$ref":"#/definitions/io.k8s.cli.setters.billing-account"}
