--- a/config-connector/solutions/iam/kpt/member-iam/iamserviceaccount.yaml
+++ b/config-connector/solutions/iam/kpt/member-iam/iamserviceaccount.yaml
@@ -15,7 +15,5 @@
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMServiceAccount
 metadata:
-  annotations:
-    # Replace the ${PROJECT_ID?} below with your desired project ID.
-    cnrm.cloud.google.com/project-id: ${PROJECT_ID?} # {"$ref":"#/definitions/io.k8s.cli.setters.project-id"}
   name: member-iam-test # {"$ref":"#/definitions/io.k8s.cli.setters.service-account-name"}
+  namespace: member-iam-solution
