--- a/config-connector/solutions/projects/kpt/project-services/service.yaml
+++ b/config-connector/solutions/projects/kpt/project-services/service.yaml
@@ -14,5 +14,5 @@
 apiVersion: serviceusage.cnrm.cloud.google.com/v1beta1
 kind: Service
 metadata:
-  namespace: project-annotated # {"$ref":"#/definitions/io.k8s.cli.setters.namespace"}
+  namespace: project-annotated
   name: firebasehosting.googleapis.com # {"$ref":"#/definitions/io.k8s.cli.setters.service-name"}
