--- a/config-connector/solutions/iam/kpt/pubsub-topic/pubsubtopic.yaml
+++ b/config-connector/solutions/iam/kpt/pubsub-topic/pubsubtopic.yaml
@@ -15,4 +15,4 @@ apiVersion: pubsub.cnrm.cloud.google.com/v1beta1
 kind: PubSubTopic
 metadata:
   name: allowed-topic # {"$ref":"#/definitions/io.k8s.cli.setters.topic-name"}
-  namespace: project-annotated
+  namespace: ${PROJECT_ID?} # {"$ref":"#/definitions/io.k8s.cli.setters.project-id"}
