--- a/config-connector/solutions/iam/kpt/service-account/iamserviceaccount.yaml
+++ b/config-connector/solutions/iam/kpt/service-account/iamserviceaccount.yaml
@@ -15,4 +15,4 @@
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMServiceAccount
 metadata:
-  name: ${SERVICE_ACCOUNT?} # {"$ref":"#/definitions/io.k8s.cli.setters.service-account-name"}
+  name: service-account-solution # {"$ref":"#/definitions/io.k8s.cli.setters.service-account-name"}
