--- a/config-connector/solutions/projects/kpt/project-services/0-namespace.yaml
+++ b/config-connector/solutions/projects/kpt/project-services/0-namespace.yaml
@@ -15,6 +15,6 @@ apiVersion: v1
 kind: Namespace
 metadata:
   annotations:
+    # Replace the ${PROJECT_ID?} below with your desired project ID.
     cnrm.cloud.google.com/project-id: ${PROJECT_ID?} # {"$ref":"#/definitions/io.k8s.cli.setters.project-id"}
-  name:
-    project-annotated
+  name: project-annotated
