--- a/.github/workflows/build-push-cft-devtools.yml
+++ b/.github/workflows/build-push-cft-devtools.yml
@@ -1,6 +1,8 @@
 name: Build and push new dev tools image
 on:
   push:
+    branches: 
+      - "master"
     paths:
       - "infra/build/**"
 env:
