--- a/.github/workflows/update-tooling.yml
+++ b/.github/workflows/update-tooling.yml
@@ -1,7 +1,7 @@
 name: Update Tooling
 on:
   schedule:
-    - cron: "0 2 * * *"
+    - cron: "* * * * *"
 env:
   TF_URL: "https://api.github.com/repos/hashicorp/terraform/releases/latest"
   GCLOUD_URL: "https://dl.google.com/dl/cloudsdk/channels/rapid/google-cloud-sdk.tar.gz"
@@ -47,8 +47,8 @@ jobs:
       - name: Commit Makefile
         if: env.LATEST_TERRAFORM != 'is latest' || env.LATEST_GCLOUD != 'is latest'
         run: |
-          git config user.name 'Bharath Baiju'
-          git config user.email 'bharathkkb@users.noreply.github.com'
+          git config user.name 'Cloud Foundation Bot'
+          git config user.email 'cloud-foundation-bot@google.com'
           git add infra/build/Makefile
           git diff-index --quiet HEAD || git commit -m "Update tools to ${{env.NEW_IMG_VERSION}} - Terraform ${{env.LATEST_TERRAFORM}} & gCloud ${{env.LATEST_GCLOUD}}"
       - name: Create Pull Request
@@ -57,8 +57,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: Update tools to ${{env.NEW_IMG_VERSION}} - Terraform ${{env.LATEST_TERRAFORM}} & gCloud ${{env.LATEST_GCLOUD}}
-          author-email: bharathkkb@users.noreply.github.com
-          author-name: Bharath Baiju
+          committer: "Update Tooling Action <cloud-foundation-bot@google.com>"
           title: "Update Tools to ${{env.NEW_IMG_VERSION}} - Terraform ${{env.LATEST_TERRAFORM}} & gCloud ${{env.LATEST_GCLOUD}}"
           body: |
             Updated tools to ${{env.NEW_IMG_VERSION}} Terraform ${{env.LATEST_TERRAFORM}} & gCloud ${{env.LATEST_GCLOUD}}
