--- a/config-connector/solutions/sql/kpt/mysql-private/sql/sqluser.yaml
+++ b/config-connector/solutions/sql/kpt/mysql-private/sql/sqluser.yaml
@@ -14,7 +14,7 @@
 apiVersion: sql.cnrm.cloud.google.com/v1beta1
 kind: SQLUser
 metadata:
-  name: ${USER_NAME?} # {"$ref":"#/definitions/io.k8s.cli.setters.user-name"}
+  name: ${USERNAME?} # {"$ref":"#/definitions/io.k8s.cli.setters.username"}
 spec:
   instanceRef:
     name: mysql-private-instance # {"$ref":"#/definitions/io.k8s.cli.setters.instance-name"}
