chore: Switch to using cloud-foundation-bot to open PRs (#647)
* update to cft bot email

update to cft bot email

* switch back to old cron timing

* test

* add robot PAT

* revert cron to prod schedule

Co-authored-by: Morgante Pell <morgantep@google.com>

--- a/.github/workflows/update-tooling.yml
+++ b/.github/workflows/update-tooling.yml
@@ -47,18 +47,17 @@ jobs:
       - name: Commit Makefile
         if: env.LATEST_TERRAFORM != 'is latest' || env.LATEST_GCLOUD != 'is latest'
         run: |
-          git config user.name 'Bharath Baiju'
-          git config user.email 'bharathkkb@users.noreply.github.com'
+          git config user.name 'Cloud Foundation Bot'
+          git config user.email 'cloud-foundation-bot@google.com'
           git add infra/build/Makefile
           git diff-index --quiet HEAD || git commit -m "Update tools to ${{env.NEW_IMG_VERSION}} - Terraform ${{env.LATEST_TERRAFORM}} & gCloud ${{env.LATEST_GCLOUD}}"
       - name: Create Pull Request
         if: env.LATEST_TERRAFORM != 'is latest' || env.LATEST_GCLOUD != 'is latest'
         uses: peter-evans/create-pull-request@v2
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.CFT_ROBOT_PAT }}
           commit-message: Update tools to ${{env.NEW_IMG_VERSION}} - Terraform ${{env.LATEST_TERRAFORM}} & gCloud ${{env.LATEST_GCLOUD}}
-          author-email: bharathkkb@users.noreply.github.com
-          author-name: Bharath Baiju
+          committer: "Update Tooling Action <cloud-foundation-bot@google.com>"
           title: "Update Tools to ${{env.NEW_IMG_VERSION}} - Terraform ${{env.LATEST_TERRAFORM}} & gCloud ${{env.LATEST_GCLOUD}}"
           body: |
             Updated tools to ${{env.NEW_IMG_VERSION}} Terraform ${{env.LATEST_TERRAFORM}} & gCloud ${{env.LATEST_GCLOUD}}
